--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -200,7 +200,7 @@ Nous avons dans notre base de cas un couple (phrase erron\'{e}e, phrase corrig\'
 La rem\'{e}moration va donc rapprocher notre probl\`{e}me cible du probl\`{e}me source et en utilisant la solution du probl\`{e}me source ainsi que l'explication, l'adaptation va pouvoir nous fournir une solution de notre probl\`{e}me cible qui sera <<\,Tu n'as pas mang\'{e}.\,>>.
 \newline
 \newline
-Pour parvenir \`{a} r\'{e}soudre notre probl\'{e}matique qui est la correction automatique du fran\c{c}ais \`{a} l'aide du raisonnement \`{a} partir du cas, il nous faut donc une base de cas qui permette en th\'{e}orie de corriger toutes les erreurs possibles du fran\c{c}ais. En prenant en compte tous les types d'erreurs possibles (grammaire, orthographe, conjugaison, etc.), il y aurait un nombre immense de cas \`{a} d\'{e}finir dans notre base, ce qui est impossible \`{a} construire \`{a} la main. Le but de notre projet est donc de construire une base de cas \`{a} l'aide d'outils diverses et vari\'{e}s qui serait totalement automatis\'{e}e.
+Pour parvenir \`{a} r\'{e}soudre notre probl\'{e}matique qui est la correction automatique du fran\c{c}ais \`{a} l'aide du raisonnement \`{a} partir du cas, il nous faut donc une base de cas qui permette en th\'{e}orie de corriger toutes les erreurs possibles du fran\c{c}ais. En prenant en compte tous les types d'erreurs possibles (grammaire, orthographe, conjugaison, etc.), il y aurait un nombre immense de cas \`{a} d\'{e}finir dans notre base, ce qui est impossible \`{a} construire \`{a} la main. Le but de notre projet est donc de construire une base de cas \`{a} l'aide d'outils divers et vari\'{e}s qui serait totalement automatis\'{e}e.
 \newline
 \newline
 Nous voyons donc qu'il est possible de r\'{e}soudre des probl\`{e}mes gr\^{a}ce au raisonnement \`{a} partir de cas. Cependant, pour pouvoir les r\'{e}soudre, il est n\'{e}cessaire d'avoir des probl\`{e}mes similaires d\'{e}j\`{a} r\'{e}solus. Cet ensemble de couples (probl\`{e}me, solution) r\'{e}solus s'appelle une base de cas. En plus du couple (probl\`{e}me, solution), une explication est ajout\'{e}e et permet d'am\'{e}liorer l'\'{e}tape de la rem\'{e}moration.
@@ -254,14 +254,14 @@ Le premier de nos deux axes \'{e}tait la d\'{e}couverte d'un outil permettant l'
 \includegraphics[width=10cm]{graphgrew.png} %l'image est retaill\'ee pour avoir une largeur de 10cm
 \end{center}
 
-Nous pouvons donc retrouver dans ce graphe le lemme de chaque mot, situ\'{e} sous le mot correspondant ainsi que les liens qu'il a avec les autres, repr\'{e}sent\'{e}s par des fl\`{e}ches qui lient les mots entre eux. Cet outil n'est donc pas un outil de d\'{e}tection d'erreur \`{a} proprement parl\'{e}. Cependant il permet, si une phrase n'est pas bien assembl\'{e}e ou dans les cas o\`{u} il n'arrive pas \`{a} trouver les liens entre les mots d'une phrase, de cr\'{e}er des graphes o\`{u} tous les mots ne sont pas li\'{e}s entre eux. Prenons par exemple la phrase utilis\'{e}e dans le graphe pr\'{e}c\'{e}dent et rempla\c{c}ons le mot <<\,C'est\,>> par <<\,S'est\,>>, ce qui est une erreur classique de fran\c{c}ais. Dans ce cas, GREW r\'{e}alise le graphe suivant :
+Nous pouvons donc retrouver dans ce graphe le lemme de chaque mot, situ\'{e} sous le mot correspondant ainsi que les liens qu'il a avec les autres, repr\'{e}sent\'{e}s par des fl\`{e}ches qui lient les mots entre eux. Cet outil n'est donc pas un outil de d\'{e}tection d'erreurs \`{a} proprement parl\'{e}. Cependant il permet, si une phrase n'est pas bien assembl\'{e}e ou dans les cas o\`{u} il n'arrive pas \`{a} trouver les liens entre les mots d'une phrase, de cr\'{e}er des graphes o\`{u} tous les mots ne sont pas li\'{e}s entre eux. Prenons par exemple la phrase utilis\'{e}e dans le graphe pr\'{e}c\'{e}dent et rempla\c{c}ons le mot <<\,C'est\,>> par <<\,S'est\,>>, ce qui est une erreur classique de fran\c{c}ais. Dans ce cas, GREW r\'{e}alise le graphe suivant :
 
 %==== image ====
 \begin{center}
 \includegraphics[width=10cm]{imgGrew.png} %l'image est retaill\'ee pour avoir une largeur de 10cm
 \end{center}
 
-Nous voyons ici que GREW n'a pas r\'{e}ussi \`{a} lier le 'S' avec les autres mots. Nous dirons par la suite qu'un graphe dans lequel un ou plusieurs mots ne sont li\'{e}s \`{a} aucun autre est un graphe qui repr\'{e}sente une phrase comporttant une ou plusieurs erreurs de fran\c{c}ais. Notre objectif est donc d'observer  les r\'{e}sultats de GREW sur des exemples multiples et vari\'{e}s, et d'analyser ses performances.
+Nous voyons ici que GREW n'a pas r\'{e}ussi \`{a} lier le 'S' avec les autres mots. Nous dirons par la suite qu'un graphe dans lequel un ou plusieurs mots ne sont li\'{e}s \`{a} aucun autre est un graphe qui repr\'{e}sente une phrase comportant une ou plusieurs erreurs de fran\c{c}ais. Notre objectif est donc d'observer  les r\'{e}sultats de GREW sur des exemples multiples et vari\'{e}s, et d'analyser ses performances.
 \newline
 \newline
 Tout d'abord, nous avons d\^{u} installer GREW, ce qui fut complexe au vu des d\'{e}pendances de ce dernier. L'installation nous a permis d'utiliser l'outil en ligne de commande, puis par l'interm\'{e}diaire d'un script BASH, qui nous a permis d'automatiser son utilisation. L'objectif de ce script \'{e}tait de faire analyser un grand nombre de phrases par GREW, correctes ou incorrectes, et de v\'{e}rifier par le biais de fichier de sortie, le pourcentage de phrases bien analys\'{e}es par celui-ci. Pour se faire, nous avons regroup\'{e} les cas du fichier XML de WiCoPaCo dans un fichier CSV. Ces cas \'{e}taient repr\'{e}sent\'{e}s comme sur la capture d'\'{e}cran ci-dessous :
@@ -292,7 +292,7 @@ Un cas dans ce fichier est repr\'{e}sent\'{e} par 3 ou 4 lignes : la premi\`{e}r
    \hline
     \, & \multicolumn{2}{|c|}{Base de cas d'Isabelle} & \multicolumn{2}{|c|}{Base de cas de WiCoPaCo} \tabularnewline
    \hline
-    \, &Cas comportant des erreurs & Cas ne comportant pas d'erreur & Cas comportant des erreurs & Cas ne comportant pas d'erreurs \tabularnewline
+    \, &Cas comportant des erreurs & Cas ne comportant pas d'erreur & Cas comportant des erreurs & Cas ne comportant pas d'erreur \tabularnewline
    \hline
     Nombre de cas rejet\'{e}s / nombre de cas & 101 / 202 & 53 / 202 & 279 / 500 & 273 / 500 \tabularnewline
    \hline
@@ -302,7 +302,7 @@ Un cas dans ce fichier est repr\'{e}sent\'{e} par 3 ou 4 lignes : la premi\`{e}r
 \end{center}
 
 
-Les r\'{e}sultats que nous analysons dans les fichiers de sorties nous montrent que dans les cas contenant une erreur, le logiciel GREW d\'{e}tecte cette erreur une fois sur deux. Cependant, ces r\'{e}sultats nous montrent aussi que le logiciel d\'{e}tecte une erreur 40 \% du temps sur des cas ne comportant pas d'erreur. N\'{e}anmoins, nous avons r\'{e}ussi \`{a} trouver des sch\'{e}mas de phrases qui se r\'{e}p\`{e}tent et pour lesquelles le logiciel ne marche pas correctement. Par exemple, tous les cas comportant des caract\`{e}res sp\'{e}ciaux tels que des accolades, des parenth\`{e}ses, des tirets, des point-virgule, des points d'interrogation, etc. sont des cas pour lesquels GREW n'arrive pas \`{a} cr\'{e}er un graphe complet correspondant et donc est consid\'{e}r\'{e} comme un cas contenant une faute m\^{e}me si ce n'est pas toujours le cas. A contrario, les cas contenant des erreurs de conjugaison sont des cas o\`{u} un graphe complet est parfois cr\'{e}\'{e} et donc consid\'{e}r\'{e} comme sans faute. Nous pouvons donc en conclure que le logiciel GREW n'est pas infaillible quant \`{a} la d\'{e}tection d'erreurs mais que des am\'{e}liorations peuvent \^{e}tre effectu\'{e}es sur les cas pour pouvoir obtenir de meilleurs r\'{e}sultats. Il est important de noter que GREW n'est pas un outil d\'{e}velopp\'{e} pour d\'{e}tecter les erreurs de fran\c{c}ais.
+Les r\'{e}sultats que nous analysons dans les fichiers de sorties nous montrent que dans les cas contenant une erreur, le logiciel GREW d\'{e}tecte cette erreur une fois sur deux. Cependant, ces r\'{e}sultats nous montrent aussi que le logiciel d\'{e}tecte une erreur 40 \% du temps sur des cas ne comportant pas d'erreur. N\'{e}anmoins, nous avons r\'{e}ussi \`{a} trouver des sch\'{e}mas de phrases qui se r\'{e}p\`{e}tent et pour lesquelles le logiciel ne fonctionne pas correctement. Par exemple, tous les cas comportant des caract\`{e}res sp\'{e}ciaux tels que des accolades, des parenth\`{e}ses, des tirets, des point-virgule, des points d'interrogation, etc. sont des cas pour lesquels GREW n'arrive pas \`{a} cr\'{e}er un graphe complet correspondant et donc est consid\'{e}r\'{e} comme un cas contenant une faute m\^{e}me si ce n'est pas toujours le cas. A contrario, les cas contenant des erreurs de conjugaison sont des cas o\`{u} un graphe complet est parfois cr\'{e}\'{e} et donc consid\'{e}r\'{e} comme sans faute. Nous pouvons donc en conclure que le logiciel GREW n'est pas infaillible quant \`{a} la d\'{e}tection d'erreurs mais que des am\'{e}liorations peuvent \^{e}tre effectu\'{e}es sur les cas pour pouvoir obtenir de meilleurs r\'{e}sultats. Il est important de noter que GREW n'est pas un outil d\'{e}velopp\'{e} pour d\'{e}tecter les erreurs de fran\c{c}ais.
 
 
 %===== 2eme sous sous partie ====
@@ -342,7 +342,7 @@ qui contient le contenu qui nous int\'{e}resse puisque c'est elle qui contient l
 Donc chacune de ces balises pouvait potentiellement correspondre \`{a} un cas qui aurait pu s'ajouter \`{a} notre base de cas. Or, apr\`{e}s une \'{e}tude de ces fichiers nous avons observ\'{e} que chaque balise <modif> n'\'{e}tait pas forc\'{e}ment une correction de langue, c'est pourquoi il \'{e}tait n\'{e}cessaire d'effectuer un traitement sur les donn\'{e}es.
 \newline
 \newline
-Donc nous avons entrepris la conception d'un logiciel qui porte le nom de WiCorrector. Celui-ci prend en entr\'{e}e un fichier au format XML tir\'{e} du site WiCoPaCo, en extrait les cas puis les traitent de sorte \`{a} enlever ceux qui ne constituent pas un cas int\'{e}ressant pour la cr\'{e}ation d'une base de cas. Enfin, il retourne les cas retenus dans un fichier au format facilement exploitable.
+Donc nous avons entrepris la conception d'un logiciel qui porte le nom de WiCorrector. Celui-ci prend en entr\'{e}e un fichier au format XML tir\'{e} du site WiCoPaCo, en extrait les cas puis les traite de sorte \`{a} enlever ceux qui ne constituent pas un cas int\'{e}ressant pour la cr\'{e}ation d'une base de cas. Enfin, il retourne les cas retenus dans un fichier au format facilement exploitable.
 \newline
 \newline
 Ce logiciel allait contenir plusieurs filtres pouvant \^{e}tre r\'{e}partis dans des cat\'{e}gories bien pr\'{e}cises, donc nous nous sommes tourn\'{e}s vers un langage orient\'{e} objet poss\'{e}dant des propri\'{e}t\'{e}s telles que l'h\'{e}ritage. Le langage Java semblait donc bien correspondre \`{a} nos besoins gr\^{a}ce \`{a} son polymorphisme de variables, de plus il est possible de trouver en ligne de nombreuses API pour l'exploitation de fichier XML.
@@ -445,8 +445,9 @@ Voici un exemple que le NumberRejector rejette :
 
 %===== 3eme sous sous partie ====
 \subsubsection{Le type Purifier}
-En plus de ces deux filtres, nous avons ajout\'{e} une autre cat\'{e}gorie, <<\,PurifierFilter\,>>, qui n'est pas un filtre en soit car il rejette aucun cas. Ce <<\,purificateur\,>> a deux principaux objectifs: premi\`{e}rement, il sert \`{a} <<\,\'{e}purer\,>> les cas qui seront retenu par les filtres pr\'{e}c\'{e}dent. Cette \'{e}puration permettra d'abord d'all\'{e}ger les donn\'{e}es contenues dans la base de cas, mais aussi d'am\'{e}liorer les \'{e}tapes de rem\'{e}moration ainsi que d'adaptation en enlevant des caract\`{e}res inutiles. De plus, nous avons vu pr\'{e}c\'{e}demment dans l'utilisation du logiciel GREW que celui-ci n'arrivait pas \`{a} construire de graphe complet lorsque la cas \'{e}tudi\'{e} comportait des caract\`{e}res sp\'{e}ciaux. Cette \'{e}puration permettra aussi d'am\'{e}liorer la qualit\'{e} d'analyse de GREW pour la d\'{e}tection d'erreurs.
-
+En plus de ces deux filtres, nous avons ajout\'{e} une autre cat\'{e}gorie, <<\,PurifierFilter\,>>, qui n'est pas un filtre en soit car il rejette aucun cas. Ce <<\,purificateur\,>> a deux principaux objectifs: premi\`{e}rement, il sert \`{a} <<\,\'{e}purer\,>> les cas qui seront retenus par les filtres pr\'{e}c\'{e}dent. Cette \'{e}puration permettra d'abord d'all\'{e}ger les donn\'{e}es contenues dans la base de cas, mais aussi d'am\'{e}liorer les \'{e}tapes de rem\'{e}moration ainsi que d'adaptation en enlevant des caract\`{e}res inutiles. De plus, nous avons vu pr\'{e}c\'{e}demment dans l'utilisation du logiciel GREW que celui-ci n'arrivait pas \`{a} construire de graphe complet lorsque le cas \'{e}tudi\'{e} comportait des caract\`{e}res sp\'{e}ciaux. Cette \'{e}puration permettra aussi d'am\'{e}liorer la qualit\'{e} d'analyse de GREW pour la d\'{e}tection d'erreurs.
+\newline
+\newline
 Dans cette cat\'{e}gorie, nous retrouvons deux filtres. Le premier filtre, <<\,SentencePurifier\,>> a pour mission de supprimer tout le contenu superflu autour de la correction, et de n'en garder que le noyau. Le probl\`{e}me \'{e}tant que les cas contenus dans le fichier de WiCoPaCo sont souvent entour\'{e}s du contexte, qui n'est pas important pour l'utilisation que nous voulons en faire. C'est pourquoi nous avons d\'{e}cid\'{e} de supprimer le contexte, dans l'optique d'all\'{e}ger le fichier de sortie
 Par exemple le cas : 
 
@@ -539,7 +540,7 @@ Notez que l'ex\'{e}cution de chaque filtre ne prend pas plus de quelques minutes
 \end{tabular}
 \end{center}
 
-Quant aux filtres <<\,Purifier\,>>, leurs ex\'{e}cutions ne d\'{e}passe pas quelques dizaines de secondes.
+Quant aux filtres <<\,Purifier\,>>, leurs ex\'{e}cutions ne d\'{e}passent pas quelques dizaines de secondes.
 
 
 
@@ -682,10 +683,10 @@ En l'enlevant de notre processus, et en ne gardant que les filtres cr\'{e}\'{e}s
 Au cours de cette recherche, nous nous sommes heurt\'{e}s \`{a} de nombreuses difficult\'{e}s comme la recherche et l'utilisation de travaux existants, la complexit\'{e} de la langue fran\c{c}aise face \`{a} la cat\'{e}gorisation des diff\'{e}rentes erreurs, ou encore la mise en place de certains filtres qui n\'{e}cessitaient un certain calibrage comme le filtre <<\,EstheticalRestructurationRejector\,>>.
 \newline
 \newline
-Cependant il reste beaucoup \`{a} faire, ne serait-ce que d'approfondir le filtrage des erreurs sur la base de cas de WiCoPaCo, et s'assurer qu'il ne reste plus d'erreurs dans les cas r\'{e}sultants. Car malgr\'{e} les filtres d\'{e}velopp\'{e}s \`{a} l'aide de notre protocole, nous n'avons pas eu le temps de traiter l'enti\`{e}ret\'{e} du fichier de WiCoPaCo et donc de supprimer toutes les erreurs de celui-ci. Il reste donc d'autres filtres \`{a} impl\'{e}menter pour permettre \`{a} ce sujet de recherche d'atteindre sa finalit\'{e}. De plus, nous nous sommes uniquement int\'{e}ress\'{e}s aux fichiers du site WiCoPaCo qui f\^{u}t trouv\'{e} par les \'{e}tudiants nous ayant pr\'{e}c\'{e}d\'{e}s. Il existe donc peut \^{e}tre d'autres recueils de cas d'erreurs de fran\c{c}ais \`{a} \'{e}tudier. 
+Cependant il reste beaucoup \`{a} faire, ne serait-ce que d'approfondir le filtrage des erreurs sur la base de cas de WiCoPaCo, et s'assurer qu'il ne reste plus d'erreur dans les cas r\'{e}sultants. Car malgr\'{e} les filtres d\'{e}velopp\'{e}s \`{a} l'aide de notre protocole, nous n'avons pas eu le temps de traiter l'enti\`{e}ret\'{e} du fichier de WiCoPaCo et donc de supprimer toutes les erreurs de celui-ci. Il reste donc d'autres filtres \`{a} impl\'{e}menter pour permettre \`{a} ce sujet de recherche d'atteindre sa finalit\'{e}. De plus, nous nous sommes uniquement int\'{e}ress\'{e}s aux fichiers du site WiCoPaCo qui f\^{u}t trouv\'{e} par les \'{e}tudiants nous ayant pr\'{e}c\'{e}d\'{e}s. Il existe donc peut \^{e}tre d'autres recueils de cas d'erreurs de fran\c{c}ais \`{a} \'{e}tudier. 
 \newline
 \newline
-Par ailleurs, il reste de nombreuses pistes que nous n'avons malheureusement pas eu le temps d'explorer, comme la cr\'{e}ation d'outils de collecte automatiques, ou la mise en place de jeu interactif ayant pour but cach\'{e} de faire corriger des fautes au joueur. 
+Par ailleurs, il reste de nombreuses pistes que nous n'avons malheureusement pas eu le temps d'explorer, comme la cr\'{e}ation d'outils de collecte automatique, ou la mise en place de jeu interactif ayant pour but cach\'{e} de faire corriger des fautes au joueur. 
 \newline
 \newline
 Tous ces ustensiles pourraient se r\'{e}v\'{e}ler \^{e}tre plus qu'efficace dans la confection de cette base de cas qui est essentielle pour le bon fonctionnement du correcteur de fran\c{c}ais fonctionnant sur un syst\`{e}me de raisonnement \`{a} partir de cas.  
@@ -699,10 +700,10 @@ Tous ces ustensiles pourraient se r\'{e}v\'{e}ler \^{e}tre plus qu'efficace dans
 Pour conclure ce projet d'initiation \`{a} la recherche, nous rappelons que ce sujet fait suite \`{a} des travaux effectu\'{e}s par des \'{e}tudiants de L3 Informatique en 2017-2018. Ces derniers ayant pour but la construction d'une base de cas contenant des corrections de fran\c{c}ais. Ce projet \'{e}tait encadr\'{e} par les \'{e}quipes K et S\'{e}magramme du Loria, constitu\'{e}es de Bruno Guillaume, Yves Lepage, Jean Lieber et Emmanuel Nauer.
 \newline
 \newline
-	Au cours de ces 6 mois d'initiation \`{a} la recherche, nous avons \'{e}tudi\'{e} le raisonnement \`{a} partir de cas, analys\'{e} le corpus de correction d'erreur de fran\c{c}ais de Wikip\'{e}dia, WiCoPaCo, ainsi que d\'{e}velopp\'{e} un logiciel Java, WiCorrector, qui permet l'\'{e}puration d'un corpus de correction de phrase de fran\c{c}ais. Toutes ces diff\'{e}rentes \'{e}tapes ont \'{e}t\'{e} tr\`{e}s enrichissantes, car elles nous ont donn\'{e} la possibilit\'{e} d'en apprendre plus sur le secteur de la recherche. De plus, le fait de travailler dans un secteur jusqu'alors inconnu nous a permis d'apprendre de nouvelles techniques de travail telles que la recherche et l'utilisation de publication scientifique, ainsi que la r\'{e}daction d'une revue scientifique. Enfin, travailler sur un sujet de recherche nous a pouss\'{e} \`{a} acqu\'{e}rir de nouvelles connaissances, dans des domaines tels que le raisonnement \`{a} partir de cas, l'utilisation d'un syst\`{e}me de composition de documents, LaTeX, ainsi que la cr\'{e}ation de protocoles rigoureux, pour l'avancement de notre projet.
+	Au cours de ces 6 mois d'initiation \`{a} la recherche, nous avons \'{e}tudi\'{e} le raisonnement \`{a} partir de cas, analys\'{e} le corpus de correction d'erreurs de fran\c{c}ais de Wikip\'{e}dia, WiCoPaCo, ainsi que d\'{e}velopp\'{e} un logiciel Java, WiCorrector, qui permet l'\'{e}puration d'un corpus de correction de phrases de fran\c{c}ais. Toutes ces diff\'{e}rentes \'{e}tapes ont \'{e}t\'{e} tr\`{e}s enrichissantes, car elles nous ont donn\'{e}s la possibilit\'{e} d'en apprendre plus sur le secteur de la recherche. De plus, le fait de travailler dans un secteur jusqu'alors inconnu nous a permis d'apprendre de nouvelles techniques de travail telles que la recherche et l'utilisation de publication scientifique, ainsi que la r\'{e}daction d'une revue scientifique. Enfin, travailler sur un sujet de recherche nous a pouss\'{e} \`{a} acqu\'{e}rir de nouvelles connaissances, dans des domaines tels que le raisonnement \`{a} partir de cas, l'utilisation d'un syst\`{e}me de composition de documents, LaTeX, ainsi que la cr\'{e}ation de protocoles rigoureux, pour l'avancement de notre projet.
 \newline
 \newline
-	Cependant, nous sommes conscients que notre projet est loin d'\^{e}tre achev\'{e}, car il reste certainement des erreurs que nous n'avons pas encore trait\'{e}s. De plus, plusieurs aspects de notre sujet de recherche n'ont pas \'{e}t\'{e} abord\'{e} tel que la cr\'{e}ation d'un jeu permettant la correction d'erreurs de fran\c{c}ais par les utilisateurs, ou l'analyse de corpus contenant des erreurs de fran\c{c}ais autre que WiCoPaCo. De nombreuses questions restent donc en suspens, elles pourront \'{e}ventuellement \^{e}tre \'{e}claircies par de prochains chercheurs qui travailleront sur ce sujet. Aussi, chaque nouvelle correction au sein de l'encyclop\'{e}die Wikip\'{e}dia ou chaque cr\'{e}ation de corpus d'erreur de fran\c{c}ais pourrait \^{e}tre un tremplin vers la r\'{e}solution de notre sujet de recherche.
+	Cependant, nous sommes conscients que notre projet est loin d'\^{e}tre achev\'{e}, car il reste certainement des erreurs que nous n'avons pas encore trait\'{e}es. De plus, plusieurs aspects de notre sujet de recherche n'ont pas \'{e}t\'{e} abord\'{e}s tels que la cr\'{e}ation d'un jeu permettant la correction d'erreurs de fran\c{c}ais par les utilisateurs, ou l'analyse de corpus contenant des erreurs de fran\c{c}ais autre que WiCoPaCo. De nombreuses questions restent donc en suspens, elles pourront \'{e}ventuellement \^{e}tre \'{e}claircies par de prochains chercheurs qui travailleront sur ce sujet. Aussi, chaque nouvelle correction au sein de l'encyclop\'{e}die Wikip\'{e}dia ou chaque cr\'{e}ation de corpus d'erreurs de fran\c{c}ais pourrait \^{e}tre un tremplin vers la r\'{e}solution de notre sujet de recherche.
 
 
 \cleardoublepage
