--- a/rapport/CompteRendu.tex
+++ b/rapport/CompteRendu.tex
@@ -43,7 +43,7 @@
 \begin{multicols}{2}
 \begin{multicols}{2}
 	\begin{flushright}
-		\`{E}tudiants :
+		\'{E}tudiants :
 	\end{flushright}
 		\vfill\null\columnbreak
 	\begin{flushleft}
